2015-05-07  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Fix usage.

2015-04-29  gepr  <gepr@tempusdictum.com>

	* cmp-by-col.r: List files by pattern containing "Loose" in experiment directories.
